fix "invoiceNumber" save with real "Number"